force-app/main/default/objects/KimbleOne__MyActivityAssignmentPreference__c/KimbleOne__MyActivityAssignmentPreference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>My Assignment View Preference</label>
</CustomObject>