force-app/main/default/objects/KimbleOne__MyActivityAssignmentPreference__c/fields/KimbleOne__DefaultView__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultView__c</fullName>
    <label>Default View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>