force-app/main/default/objects/KimbleOne__MyActivityAssignmentPreference__c/fields/KimbleOne__DefaultZoomLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultZoomLevel__c</fullName>
    <label>Default Zoom Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>