force-app/main/default/objects/KimbleOne__MyActivityAssignmentPreference__c/fields/KimbleOne__ShowHistoricAssignments__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowHistoricAssignments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Historic Assignments</label>
    <type>Checkbox</type>
</CustomField>